--- a/css/style.less
+++ b/css/style.less
@@ -2,9 +2,7 @@ body {
     background-color: black;
 }
 
-.cards{
-    display: flex;
-    
+.cards{ 
     img{
         height: 400px;
     }
@@ -14,3 +12,20 @@ body {
     }   
     
 }
+@media only screen and (max-width: 990px) {
+    .cards{
+        .Cardio{
+            padding: 0px;
+            margin:  50px;
+        }
+    }
+  }
+  @media only screen and (max-width: 769px) {
+    .cards{
+        .Cardio{
+            margin:50px;
+            margin-left: 110px;
+        }
+    }
+  }
+  
