--- a/css/style.less
+++ b/css/style.less
@@ -2,6 +2,12 @@ body {
     background-color: black;
 }
 
+header img {
+    max-height: 1200px;
+    
+}
+
+
 .cards{ 
     img{
         height: 400px;
