scrol menu wich one

--- a/css/style.less
+++ b/css/style.less
@@ -39,4 +39,25 @@ header img {
 .carousel_cards {
     display: flex;
     justify-content: center;
+
+    .card{
+        margin: 10px 4vw;
+    }
 }
+
+
+div.scrollmenu {
+    background-color: #000000;
+    overflow: auto;
+    white-space: nowrap;
+  }
+  
+  div.scrollmenu .card {
+    display: inline-block;
+    color: white;
+    padding: 14px;
+    text-decoration: none;
+    white-space: wrap;
+    margin: 0 10px;
+  }
+  
