--- a/css/style.less
+++ b/css/style.less
@@ -42,6 +42,11 @@ header img {
 
     .card{
         margin: 10px 4vw;
+        height: 300px;
+        width: 500px;
+    }
+    img{
+        height: 300px;
     }
 }
 
