--- a/css/style.less
+++ b/css/style.less
@@ -65,3 +65,10 @@ div.scrollmenu {
     margin: 0 10px;
   }
   
+
+.User {
+    border-radius: 20%;
+    height: 40px;
+    width: 40px;
+    margin-left: 10px;
+}
