--- a/css/style.less
+++ b/css/style.less
@@ -76,3 +76,10 @@ p{
     width: 40px;
     margin-left: 10px;
 }
+
+
+h1 {
+    color: aliceblue;
+    text-align: center;
+    font-size: 30px;
+}
