--- a/css/style.less
+++ b/css/style.less
@@ -7,7 +7,10 @@ header img {
     
 }
 
+img.d-block.w-100{
+    height: 35em;
 
+}
 .cards{ 
     img{
         height: 400px;
@@ -79,6 +82,8 @@ p{
 
 
 h1 {
+    margin-top: 2px;
+    margin-right: 80%;
     color: aliceblue;
     text-align: center;
     font-size: 30px;
