--- a/css/style.less
+++ b/css/style.less
@@ -86,5 +86,6 @@ h1 {
     margin-right: 80%;
     color: aliceblue;
     text-align: center;
-    font-size: 30px;
+    font-size: max(2.5vw, calc(50px + 1.5vw));
+
 }
